# pdf-scrivener-plusplus

./: CMakeLists.txt  README.md  bad_characters.txt  md  output.txt  outputAll.txt
src/: AppWizard.cpp  AppWizard.h  ChoicePage.cpp  ChoicePage.h  ContextPage.cpp  ContextPage.h  MyPage.h  OpenPDFPage.cpp  OpenPDFPage.h  ReplacementInfo.h  pdf_scrivener.cpp  pdf_scrivener.h
uniResources/: text_clean_experiment1.py
